--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier . --write",
-    "prepare": "husky"
+    "prepare": "husky",
+    "migrations": "prisma migrate dev --name init",
+    "prisma-studio": "prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "5.18.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -22,12 +26,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "sqlite3": "^5.1.7",
     "vite-express": "^0.18.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
@@ -43,6 +47,7 @@
     "lint-staged": "^15.2.9",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
+    "prisma": "^5.18.0",
     "tsx": "^4.18.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
